Merged branch enhancements_210
git-svn-id: http://svn.codehaus.org/esper/esper/trunk@1312 d91eb1b3-1215-0410-9718-d41490442091